--- a/IDE/public/belaDiagram/diagram.html
+++ b/IDE/public/belaDiagram/diagram.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <!--<link rel="stylesheet" type="text/css" href="stylesheet.css" />-->
+    <link rel="stylesheet" type="text/css" href="css/tooltipster.main.css" />
+    <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.css" />
     <link rel="stylesheet" type="text/css" href="css/diagramStyle.css" />
-    <link rel="stylesheet" type="text/css" href="css/tooltipster.css" />
 
     <script src="/js/jquery.js"></script>
     <!-- tooltipster: for tooltippin -->
