--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -121,10 +121,11 @@
                 <!-- <p>Actions:</p> --> 
                 <button class="project-button project-save projectManager" data-func="saveAs" id="saveas" title="Save project as ..."></button>
                 <button class="project-button project-new fileManager" data-func="newFile" title="Create new file"></button>
-                <button class="project-button project-upload fileManager" data-func="uploadFile" id="uploadFile" title="Upload file"></button>
-                <button class="project-button project-download fileManager" title="Download project"></button>
+                <button class="button project-button project-upload fileManager" data-func="uploadFile" id="uploadFile" title="Upload file"></button>
+                <a data-project-download href="/download" download><button class="project-button project-download fileManager" id="downloadProject" title="Download project"></button></a>
                 <button class="project-button project-clean projectManager" id="cleanProject" data-func="cleanProject" title="Clean project"></button>
                 <button class="project-button project-delete projectManager" id="deleteProject" data-func="deleteProject" title="Delete project"></button>
+                <input type="file" id="uploadFileInput" class="hidden" data-upload-file-input multiple></input>
                 <p class="project-text"></p>
               </div>
 
