Expanded project contents and project settings panels by default

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -119,7 +119,7 @@
 
 
               <button class="accordion" data-accordion-for="project-files">Project contents</button>
-              <div class="panel" data-accordion="project-files">
+              <div class="panel show" data-accordion="project-files">
                 <ul class="file-list" data-file-list>
                 </ul>
               </div>
@@ -215,7 +215,7 @@
 
               <button class="accordion" data-accordion-for="project-settings">Project Settings</button>
 
-              <div class="panel" data-accordion="project-settings">
+              <div class="panel show" data-accordion="project-settings">
                 <table class="tabTable choice">
                   <tr>
                     <td class="left-choice">Block size (audio frames):</td>
