Fix for the dropdown menu multi select problem

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -107,8 +107,10 @@
               <span class="dropdown" data-projects>
 							  <button class="dropbtn" data-dropdown-for="project">Your projects</button>
                 <div class="dropdown-content" data-dropdown="project">
-                  <select class="projectManager" id="projects" data-projects-select data-func="openProject" multiple>
-  						    </select>
+                  <ul class="projectManager" id="projects" data-projects-select data-func="openProject">
+                  </ul>
+                  <!-- <select class="projectManager" id="projects" data-projects-select data-func="openProject" multiple>
+  						    </select> -->
                 </div>
 							</span>
               <button id="new" class="create-project projectManager" data-func="newProject">New Project</button>
