Added mini-dropdown span around capelet settings selectors so they now display correctly

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -350,21 +350,25 @@
                   <tr>
                     <td class="left-choice">Multiplexer Capelet:</td>
                     <td class="right-choice">
-                      <select id="multiplexer-capelet" class="settingsManager small" data-func="setCLArg" data-key="-X">
-                        <option value="0">Not Used</option>
-                        <option value="2">16 Channels</option>
-                        <option value="4">32 Channels</option>
-                        <option value="8">64 Channels</option>
-                      </select>
+                      <span class="mini-dropdown">
+                        <select id="multiplexer-capelet" class="settingsManager small" data-func="setCLArg" data-key="-X">
+                          <option value="0">Not Used</option>
+                          <option value="2">16 Channels</option>
+                          <option value="4">32 Channels</option>
+                          <option value="8">64 Channels</option>
+                        </select>
+                      </span>
                     </td>
                   </tr>
                   <tr>
                     <td class="left-choice">Audio Expander Capelet:</td>
                     <td class="right-choice">
-                      <select id="audio-expander-capelet" class="settingsManager small" data-func="useAudioExpander" data-key="audioExpander">
-                        <option value="0">Not Used</option>
-                        <option value="1">Active</option>
-                      </select>
+                      <span class="mini-dropdown">
+                        <select id="audio-expander-capelet" class="settingsManager small" data-func="useAudioExpander" data-key="audioExpander">
+                          <option value="0">Not Used</option>
+                          <option value="1">Active</option>
+                        </select>
+                      </span>
                     </td>
                   </tr>
                 </table>
