--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -372,7 +372,7 @@
                     </td>
                   </tr>
                 </table>
-
+                <p class="tab-subheading">Audio Expander channel toggles:</p>
                 <table id="audioExpanderTable" data-audio-expander-table class="choice">
                   <tr>
                     <th class="left-choice">Channel</th>
