Section loader moved to gui/index.html body. Removed redundant logs.

--- a/IDE/public/gui/index.html
+++ b/IDE/public/gui/index.html
@@ -15,5 +15,5 @@
             <script src="/gui/js/gui-loader.js"></script>
           </head>
 
-          <body></body>
+          <body onload="sectionLoader(location.hash)"></body>
 </html>
