--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -120,9 +120,9 @@
               </div>
 
               <div class="project-actions">
-                <!-- <p>Actions:</p> --> 
                 <button class="project-button project-save projectManager" data-func="saveAs" id="saveas" title="Save project as ..."></button>
                 <button class="project-button project-new fileManager" data-func="newFile" title="Create new file"></button>
+                <button class="project-button project-new-folder fileManager" data-func="newFolder" title="Create new folder"></button>
                 <button class="button project-button project-upload fileManager" data-func="uploadFile" id="uploadFile" title="Upload file"></button>
                 <a data-project-download href="/download" download><button class="project-button project-download fileManager" id="downloadProject" title="Download project"></button></a>
                 <button class="project-button project-clean projectManager" id="cleanProject" data-func="cleanProject" title="Clean project"></button>
@@ -134,10 +134,10 @@
 
               <button class="accordion" data-accordion-for="project-files">Project contents</button>
               <div class="panel show" data-accordion="project-files">
-                <ul class="file-list" data-file-list>
-                </ul>
+                <div class="file-list" data-file-list>
+                </div>
               </div>
-              
+
               <button class="accordion" data-accordion-for="git">Git manager</button>
               <div class="panel" data-accordion="git">
 
@@ -608,7 +608,9 @@
         <h3></h3>
 				<p></p>
         <code></code>
-				<form></form>
+				<form>
+          <input type="hidden" value=""></input>
+        </form>
 			</div>
 		</div>
 
