FEAT: Large File Uploads - Added a layer that sits above the popup if there's an upload in progress.
(cherry picked from commit 9a933f218c780afaeb30da74a2e8b7b50ad3e540)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -123,7 +123,7 @@
               </div>
 
               <div class="project-actions">
-                <!-- <p>Actions:</p> --> 
+                <!-- <p>Actions:</p> -->
                 <button class="project-button project-save projectManager" data-func="saveAs" id="saveas" title="Save project as ..."></button>
                 <button class="project-button project-new fileManager" data-func="newFile" title="Create new file"></button>
                 <button class="button project-button project-upload fileManager" data-func="uploadFile" id="uploadFile" title="Upload file"></button>
@@ -140,7 +140,7 @@
                 <ul class="file-list" data-file-list>
                 </ul>
               </div>
-              
+
               <button class="accordion" data-accordion-for="git">Git manager</button>
               <div class="panel" data-accordion="git">
 
@@ -632,6 +632,9 @@
 				<form></form>
 			</div>
 		</div>
+
+    <div id="popup-nointeraction" data-popup-nointeraction>
+    </div>
 
 		<script src="js/ace/ace.js"></script>
 		<script src="js/ace/ext-language_tools.js"></script>
