FIX: Firefox Scope - Removed unused IDs (checked through JS, it's not mentioned) and moved CSS selector values to recently added select class values

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="triggerMode" id="scope-drop">
+                <select class="scope-controls" data-key="triggerMode">
                   <option value="0" selected>Auto</option>
                   <option value="1">Normal</option>
                   <option value="2">Custom</option>
@@ -99,7 +99,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select  class="scope-controls" data-key="triggerChannel" id="scope-drop">
+                <select  class="scope-controls" data-key="triggerChannel">
                   <option value="0" selected>1</option>
                 </select>
               </span>
@@ -112,7 +112,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="triggerDir" id="scope-drop">
+                <select class="scope-controls" data-key="triggerDir">
                   <option value="0" selected>Positive</option>
                   <option value="1">Negative</option>
                   <option value="2">Bi-Directional</option>
@@ -127,7 +127,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="interpolation" id="scope-drop">
+                <select class="scope-controls" data-key="interpolation">
                   <option value="0" selected>Linear</option>
                   <option value="1">None</option>
                 </select>
@@ -162,7 +162,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="FFTLength" id="scope-drop">
+                <select class="scope-controls" data-key="FFTLength">
                   <option value="128">128</option>
                   <option value="256">256</option>
                   <option value="512">512</option>
@@ -184,7 +184,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="FFTXAxis" id="scope-drop">
+                <select class="scope-controls" data-key="FFTXAxis">
                   <option value="0" selected>Linear</option>
                   <option value="1">Logarithmic</option>
                 </select>
@@ -198,7 +198,7 @@
             </div>
             <div class="scope-input">
               <span class="mini-dropdown">
-                <select class="scope-controls" data-key="FFTYAxis" id="scope-drop">
+                <select class="scope-controls" data-key="FFTYAxis">
                   <option value="0" selected>Normalised</option>
                   <option value="1">Decibels</option>
                 </select>
