Tab content added to index file

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -93,6 +93,9 @@
             <li class="libraries" data-tab-for="libraries" title="Libraries">
               <a href="#" rel="libs" class="tab-button"></a>
             </li>
+            <li class="feedback" data-tab-for="feedback" title="Feedback">
+              <a href="#" rel="feedback" class="tab-button"></a>
+            </li>
           </ul>
         </div>
 
@@ -581,6 +584,23 @@
                 <h1>Libraries<hr /></h1>
               </div>
               <ul class="libraries-list-parent" data-libraries-list data-func="resources"></ul>
+            </div>
+
+            <div class="tab-info" data-tab="feedback">
+              <div class="title-container">
+                <h1>Feedback<hr /></h1>
+              </div>
+
+              <p>Thank you for using the early release of the Bela IDE!</p>
+              <p>We listen to and rely on your feedback to make this IDE the best it can be. We would love to hear what you think - these forms take only a few mintues, and require an internet conneciton.</p>
+              <p>Please fill out our general feedback form to share your thoughts and experiences with the new IDE:</p>
+              <button class="general feedback"><a href="https://forms.gle/y45V57FxHNRMyQci8" target="new">Go to the General Feedback form</a></button>
+
+              <p>Found a bug? Take some screenshots, and report it here:</p>
+              <button class="bug feedback"><a href="https://forms.gle/w5HAajdaJuVg4UZM6" target="new">Go to the Bug Report form</a></button>
+
+              <p>As always, thank you for being part of the global Bela community. We hope you enjoy this new IDE as much as we enjoy creating it. :)</p>
+
             </div>
           </section>
         </div>
