Adjusted href targets
(cherry picked from commit 6270722185f05e5e4990c302ebfd91f7f18f9888)

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -594,10 +594,10 @@
               <p>Thank you for using the early release of the Bela IDE!</p>
               <p>We listen to and rely on your feedback to make this IDE the best it can be. We would love to hear what you think - these forms take only a few mintues, and require an internet conneciton.</p>
               <p>Please fill out our general feedback form to share your thoughts and experiences with the new IDE:</p>
-              <button class="general feedback"><a href="https://forms.gle/y45V57FxHNRMyQci8" target="new">Go to the General Feedback form</a></button>
+              <button class="general feedback"><a href="https://forms.gle/y45V57FxHNRMyQci8" target="_blank">Go to the General Feedback form</a></button>
 
               <p>Found a bug? Take some screenshots, and report it here:</p>
-              <button class="bug feedback"><a href="https://forms.gle/w5HAajdaJuVg4UZM6" target="new">Go to the Bug Report form</a></button>
+              <button class="bug feedback"><a href="https://forms.gle/w5HAajdaJuVg4UZM6" target="_blank">Go to the Bug Report form</a></button>
 
               <p>As always, thank you for being part of the global Bela community. We hope you enjoy this new IDE as much as we enjoy creating it. :)</p>
 
