--- a/IDE/public/gui/index.html
+++ b/IDE/public/gui/index.html
@@ -9,11 +9,22 @@
             <style> body {padding: 0; margin: 0;} </style>
 
             <script src="../js/jquery.js"></script>
-            <script src="../js/bela-ws.js"></script>
 
             <script src="/gui/js/utils.js"></script>
             <script src="/gui/js/gui-loader.js"></script>
+            <script type="module">
+                let isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
+                if(isSafari) {
+                    import('../js/event-target-polyfill.js')
+                    .then(({default: EventTarget}) => {
+                        window.EventTarget = EventTarget;
+                    });
+                }
+            </script>
+            <script type="module">
+                import { default as Bela } from './js/Bela.js'
+                window.Bela = new Bela();
+            </script>
           </head>
 
-          <body onload="sectionLoader(location.hash)"></body>
-</html>
+          <body onload="sectionLoader(location.hash)"></body
