Added missing classes so the header buttons for the sections that are active on startup behave properly

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -135,7 +135,7 @@
               </div>
 
 
-              <button class="accordion" data-accordion-for="project-files">Project contents</button>
+              <button class="accordion active" data-accordion-for="project-files">Project contents</button>
               <div class="panel show" data-accordion="project-files">
                 <div class="file-list" data-file-list>
                 </div>
@@ -211,7 +211,7 @@
                 </td>
               </tr>
             </table>
-              <button class="accordion" data-accordion-for="project-settings">Project Settings</button>
+              <button class="accordion active" data-accordion-for="project-settings">Project Settings</button>
 
               <div class="panel show" data-accordion="project-settings">
                 <table class="tabTable choice">
