Default message on gui page updated to explain that the project needs to be runnign for the gui to be accessible

--- a/IDE/public/gui/p5-gui.html
+++ b/IDE/public/gui/p5-gui.html
@@ -6,6 +6,7 @@
     <p>In order to use the GUI functionality in Bela</p>
     <p>you need to use the GUI library</p>
     <p>and include a sketch.js file (p5 sketch) in your project.</p>
+    <p>(Your project will need to be running for the GUI to be accessible).</p>
 </div>
 
 <script>selectSketch();</script>
