--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -542,8 +542,26 @@
               <div class="title-container">
                 <h1>Pin Diagram<hr /></h1>
               </div>
+
+              <table class="tabTable choice boot">
+              <tr>
+                <td class="left-choice">Current diagram:</td>
+                <td class="right-choice">
+                  <span class="mini-dropdown">
+                    <select name="activeBoard" class="small" data-board-select>
+                      <option value="Bela">Bela</option>
+                      <option value="BelaMini">Bela Mini</option>
+                      <option value="ctag_FACE">CTAG FACE</option>
+                      <option value="ctag_FACE_BELA">CTAG FACE + Bela</option>
+                      <option value="ctag_BEAST">CTAG BEAST</option>
+                      <option value="ctag_BEAST_BELA">CTAG BEAST + Bela</option>
+                    </select>
+                  </span>
+                </td>
+              </tr>
+            </table>
               <div id="pin_container">
-                <p class="diagram-text">Hover over the coloured sections for more information.</p>
+                <!-- <p class="diagram-text">Hover over the coloured sections for more information.</p> -->
                 <object data="belaDiagram/diagram.html" id="pin_diagram_object" data-pin-diagram>
                   Your browser doesn’t support the object tag.
                 </object>
