Multi Diagrams: Amended board names to reflect the values returned by `detect_board`

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -551,10 +551,10 @@
                     <select name="activeBoard" class="small" data-board-select>
                       <option value="Bela">Bela</option>
                       <option value="BelaMini">Bela Mini</option>
-                      <option value="ctag_FACE">CTAG FACE</option>
-                      <option value="ctag_FACE_BELA">CTAG FACE + Bela</option>
-                      <option value="ctag_BEAST">CTAG BEAST</option>
-                      <option value="ctag_BEAST_BELA">CTAG BEAST + Bela</option>
+                      <option value="CtagFace">CTAG FACE</option>
+                      <option value="CtagFaceBela">CTAG FACE + Bela</option>
+                      <option value="CtagBeast">CTAG BEAST</option>
+                      <option value="CtagBeastBela">CTAG BEAST + Bela</option>
                     </select>
                   </span>
                 </td>
