Multi Diagrams: Setting id=, as that is what src/Views/TabViews.js is expecting

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -548,7 +548,7 @@
                 <td class="left-choice">Current diagram:</td>
                 <td class="right-choice">
                   <span class="mini-dropdown">
-                    <select name="activeBoard" class="small" data-board-select>
+                    <select id="activeBoard" name="activeBoard" class="small" data-board-select>
                       <option value="Bela">Bela</option>
                       <option value="BelaMini">Bela Mini</option>
                       <option value="CtagFace">CTAG FACE</option>
