Scope: scale sliders are now logarithmic. Closes https://github.com/BelaPlatform/Bela-private/issues/137

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -236,7 +236,7 @@
               </div>
 
               <div class="slider range">
-                <input class="channelView scope-range-slider" data-key="yAmplitude" data-channel="0" type="range" min="0" max="100" value="1" step="0.0001" />
+                <input class="channelView scope-range-slider" data-key="yAmplitudeSlider" data-channel="0" type="range" min="0" max="100" value="1" step="0.0001" />
               </div>
             </div>
 
