Fixed accordion for Documentation which was broken after merge commit e885c05668fab6d1f4aad3cd20a09cea50650314 probably because of df536263e518c862ebaf4f4ab89410b16df48982

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -576,19 +576,19 @@
               </a>
 							<div id="docsParent" class="sections">
 
-                  <button class="accordion" data-accordion-for="bela-context">The Bela Context</button>
+                  <button class="accordion" data-parent="refs" data-accordion-for="bela-context">The Bela Context</button>
                   <div class="panel" data-accordion="bela-context">
   									<ul class="subsections" data-docs-context>
   									</ul>
                   </div>
 
-                  <button class="accordion" data-accordion-for="api">The API</button>
+                  <button class="accordion" data-parent="refs" data-accordion-for="api">The API</button>
                   <div class="panel" data-accordion="api">
   									<ul class="subsections" data-docs-api>
   									</ul>
                   </div>
 
-                  <button class="accordion" data-accordion-for="utilities">Utilities</button>
+                  <button class="accordion" data-parent="refs" data-accordion-for="utilities">Utilities</button>
                   <div class="panel" data-accordion="utilities">
   									<ul class="subsections" data-docs-utility>
   									</ul>
