Fixed accordion for Capelet Settings, also broken since df536263e518c862ebaf4f4ab89410b16df48982

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -357,7 +357,7 @@
                 <button class="settingsManager settings-button" data-func="restoreDefaultCLArgs">Restore default project settings</button>
               </div>
 
-              <button class="accordion" data-accordion-for="capelet-settings">Capelet Settings</button>
+              <button class="accordion" data-accordion-for="capelet-settings" data-parent="settings">Capelet Settings</button>
               <div class="panel" data-accordion="capelet-settings">
                 <table class="tabTable capelet-settings choice">
                   <tr>
