--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -224,6 +224,11 @@
                           <option value="32">32</option>
                           <option value="64">64</option>
                           <option value="128">128</option>
+                          <option value="256">256</option>
+                          <option value="512">512</option>
+                          <option value="1024">1024</option>
+                          <option value="2048">2048</option>
+                          <option value="4096">4096</option>
                         </select>
                       </span>
                     </td>
