--- a/IDE/public/gui/gui-template.html
+++ b/IDE/public/gui/gui-template.html
@@ -7,7 +7,10 @@
 			body {
 				padding: 0;
 				margin: 0;
-				overflow: hidden
+				overflow: hidden;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 		</style>
 	</head>
