Added gui-container div. Style now loaded from css stylesheets

--- a/IDE/public/gui/gui-template.html
+++ b/IDE/public/gui/gui-template.html
@@ -4,19 +4,12 @@
 		<script src="../js/p5.dom.min.js"></script>
 		<script src="../js/dat.gui.min.js"></script>
 		<script src="../js/jquery.js"></script>
-		<style>
-			body {
-				padding: 0;
-				margin: 0;
-				overflow: hidden;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-			}
-		</style>
+        <link rel="stylesheet" href="css/template.css">
+        <link rel="stylesheet" href="css/dat-gui-bela-theme.css">
 	</head>
 
 	<body scroll="no" style="margin: 0; overflow: hidden">
+		<div id="gui-container"></div>
 		<script>
 			window.data = "data"
 			window.Bela = window.parent.Bela;
