IDE: make make and user command line args textareas.
Closes https://github.com/BelaPlatform/Bela/issues/362.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -338,13 +338,13 @@
                   <tr>
                     <td class="left-choice">User Command Line Arguments:</td>
                     <td class="right-choice">
-                      <input id="user-clargs" class="settingsManager" data-func="setCLArg" type="text" data-key="user"></input>
+                      <textarea id="user-clargs" class="settingsManager" data-func="setCLArg" data-key="user"></textarea>
                     </td>
                   </tr>
                   <tr>
                     <td class="left-choice">Make Parameters:</td>
                     <td class="right-choice">
-                      <input id="make-params" class="settingsManager" data-func="setCLArg" type="text" data-key="make"></input>
+                      <textarea id="make-params" class="settingsManager" data-func="setCLArg" data-key="make"></textarea>
                     </td>
                   </tr>
                 </table>
