--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -541,6 +541,8 @@
                 <button class="settingsManager" data-func="updateBela">Update Bela</button>
                 <br />
                 <button class="settingsManager" data-func="aboutPopup">About Bela</button>
+                <br />
+                <button class="settingsManager" data-func="versionPopup">Version details</button>
               </div>
 
             </div>
