Amendments to pin diagram

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -522,9 +522,9 @@
               <button class="accordion" data-accordion-for="feedback-panel" data-parent="settings">Feedback</button>
               <div class="panel" data-accordion="feedback-panel">
                 <p>We listen to and rely on your feedback to make this IDE the best it can be. We would love to hear what you think - these forms take only a few mintues, and require an internet conneciton.</p>
-              
+
                 <p>Please fill out our general feedback form to share your thoughts and experiences with the new IDE:</p>
-                
+
                 <button class="general feedback"><a href="https://forms.gle/hHkLMTUaCELPD8bR7" target="_blank">Go to the General Feedback form</a></button>
 
                 <p>Found a bug? Take some screenshots, and report it here:</p>
@@ -558,6 +558,7 @@
                     <select id="activeBoard" class="small" data-board-select>
                       <option value="Bela">Bela</option>
                       <option value="BelaMini">Bela Mini</option>
+					  <option value="BelaMiniMultichannelExpander">Bela Mini Multichannel Expander</option>
                       <option value="CtagFace">CTAG FACE</option>
                       <option value="CtagFaceBela">CTAG FACE + Bela</option>
                       <option value="CtagBeast">CTAG BEAST</option>
