--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -263,15 +263,6 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="left-choice">Headphone level (dB):</td>
-                    <td class="right-choice">
-                      <span class="number-picker" data-number-picker>
-                        <button class="settingsManager input-number-decrement"  data-func="setCLArg" data-key="-H" data-number-picker-decrement value="">-</button>
-                        <input id="hp-level" class="settingsManager input-number number-picker" data-func="setCLArg" type="text" max="0" min="-63" step="1" data-key="-H" data-number-picker-input></input>
-                        <button class="settingsManager input-number-increment"  data-func="setCLArg" data-key="-H" data-number-picker-increment value="">+</button>
-                    </td>
-                  </tr>
-                  <tr>
                     <td class="left-choice">Use Analog:</td>
                     <td class="right-choice">
                       <input type="checkbox" id="use-analog" class="settingsManager checkbox-slider" data-func="setCLArg" data-key="-N" value="1">
@@ -289,62 +280,50 @@
                       <input type="checkbox" id="mute-speaker" class="settingsManager checkbox-slider" data-func="setCLArg" data-key="-M" value="1">
                     </td>
                   </tr>
-                  <tr>
-                    <td class="left-choice">DAC level (dB):</td>
-                    <td class="right-choice">
-                      <span class="number-picker" data-number-picker>
-                        <button class="settingsManager input-number-decrement"  data-func="setCLArg" data-key="-D" data-number-picker-decrement value="">-</button>
-                        <input id="dac-level" class="settingsManager input-number number-picker" data-func="setCLArg" type="text" max="0" min="-63" step="1" data-key="-D" data-number-picker-input></input>
-                        <button class="settingsManager input-number-increment"  data-func="setCLArg" data-key="-D" data-number-picker-increment value="">+</button>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="left-choice">ADC level (dB):</td>
-                    <td class="right-choice">
-                      <span class="number-picker" data-number-picker>
-                        <button class="settingsManager input-number-decrement" data-func="setCLArg" data-key="-A" data-number-picker-decrement>-</button>
-                        <input id="adc-level" class="settingsManager input-number number-picker" data-func="setCLArg" type="text" max="0" min="-63" step="1" data-key="-A" data-number-picker-input></input>
-                        <button class="settingsManager input-number-increment" data-func="setCLArg" data-key="-A" data-number-picker-increment>+</button>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="left-choice">PGA Gain left (dB):</td>
-                    <td class="right-choice">
-                      <span class="number-picker" data-number-picker>
-                        <button class="settingsManager input-number-decrement" data-func="setCLArg" data-key="--pga-gain-left" data-number-picker-decrement>-</button>
-                        <input id="pga-left" class="settingsManager input-number number-picker" data-func="setCLArg" type="text" min="0" max="63" step="1" data-key="--pga-gain-left" data-number-picker-input></input>
-                        <button class="settingsManager input-number-increment" data-func="setCLArg" data-key="--pga-gain-left" data-number-picker-increment>+</button>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="left-choice">PGA Gain right (dB):</td>
-                    <td class="right-choice">
-                      <span class="number-picker" data-number-picker>
-                        <button class="settingsManager input-number-decrement" data-func="setCLArg" data-key="--pga-gain-right" data-number-picker-decrement>-</button>
-                        <input id="pga-right" class="settingsManager input-number number-picker" data-func="setCLArg" type="text" min="0" max="63" step="1" data-key="--pga-gain-right" data-number-picker-input></input>
-                        <button class="settingsManager input-number-increment" data-func="setCLArg" data-key="--pga-gain-right" data-number-picker-increment>+</button>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
+                  <tr data-settings="disable-led">
                     <td class="left-choice">Disable LED:</td>
                     <td class="right-choice">
-                      <input type="checkbox" id="disable-led" class="settingsManager checkbox-slider" data-func="setCLArg" data-key="--disable-led" value="0">
+                      <input type="checkbox" class="settingsManager checkbox-slider" data-func="setCLArg" data-key="--disable-led" value="0">
                     </td>
                   </tr>
-                  <tr>
+<script>
+function generateNumberBoxes(preTitle, postTitle, flag, dataSettings, count, min, max, step) {
+	let out = '';
+	for (let c = 0; c < count; ++c) {
+		let text = `
+                  <tr data-settings="${dataSettings}${c}">
+                    <td class="left-choice">${preTitle} ${c} ${postTitle}:</td>
+                    <td class="right-choice">
+                      <span class="number-picker" data-number-picker>
+                        <button class="settingsManager input-number-decrement" data-func="setCLArg" data-key="${flag}${c}," data-number-picker-decrement>-</button>
+                        <input id="${flag}${c}," class="settingsManager input-number number-picker" data-func="setCLArg" type="text" min="${min}" max="${max}" step="${step}" data-key="${flag}${c}," data-number-picker-input></input>
+                        <button class="settingsManager input-number-increment" data-func="setCLArg" data-key="${flag}${c}," data-number-picker-increment>+</button>
+                      </span>
+                    </td>
+                  </tr>`;
+		out += text;
+	}
+	return out;
+}
+function generateHp(numChannels) {
+	return generateNumberBoxes('Headphone', 'level (dB)', '-H', 'headphone-level', numChannels, -63, 0, 1);
+}
+document.write(generateHp(8));
+function generateInputGain(numChannels) {
+	return generateNumberBoxes('Input ', 'gain (dB)', '-I', 'input-level', numChannels, -12, 60, 1);
+}
+document.write(generateInputGain(8));
+</script>
+                  <tr data-settings="user-clargs">
                     <td class="left-choice">User Command Line Arguments:</td>
                     <td class="right-choice">
-                      <textarea id="user-clargs" class="settingsManager" data-func="setCLArg" data-key="user"></textarea>
+                      <textarea class="settingsManager" data-func="setCLArg" data-key="user"></textarea>
                     </td>
                   </tr>
-                  <tr>
+                  <tr data-settings="make-params">
                     <td class="left-choice">Make Parameters:</td>
                     <td class="right-choice">
-                      <textarea id="make-params" class="settingsManager" data-func="setCLArg" data-key="make"></textarea>
+                      <textarea class="settingsManager" data-func="setCLArg" data-key="make"></textarea>
                     </td>
                   </tr>
                 </table>
