Added gui theme switch

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -506,6 +506,13 @@ document.write(generateInputGain(8));
                     </td>
                   </tr>
 
+                  <tr>
+                    <td class="left-choice">Dark Theme:</td>
+                    <td class="right-choice">
+                      <input type="checkbox" id="darkTheme" class="settingsManager checkbox-slider" data-func="setIDESetting" data-key="darkTheme" value="1" >
+                    </td>
+                  </tr>
+
                 </table>
                 <button class="settingsManager settings-button" data-func="restoreDefaultIDESettings">Restore default IDE settings</button>
               </div>
