Added support for BelaRevC to IDE. Image and json of diagram are just placeholders

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -550,6 +550,7 @@ document.write(generateInputGain(8));
                   <span class="mini-dropdown">
                     <select id="activeBoard" class="small" data-board-select>
                       <option value="Bela">Bela</option>
+                      <option value="BelaRevC">Bela Rev C</option>
                       <option value="BelaMini">Bela Mini</option>
                       <option value="BelaMiniMultiAudio">Bela Mini Multichannel</option>
                       <option value="CtagFace">CTAG FACE</option>
