IDE: keypress.js is sometimes blocked by clients. Renamed it so that it doesn't get blocked. Very smart.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -643,7 +643,7 @@ document.write(generateInputGain(8));
     <script src="js/ace/ace.js"></script>
     <script src="js/ace/ext-language_tools.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script src="js/keypress.js"></script>
+    <script src="js/keypress-scrambled.js"></script>
     <script src="js/pd-fileutils.js"></script>
     <script src="js/goldenlayout.js"></script>
     <script src="js/polyfill.js"></script>
