--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -233,6 +233,7 @@
             <button class="scope-controls dark-mode-button" data-key="darkMode" data-func="darkMode">Dark mode</button><br />
             <button class="scope-controls show-labels-button" data-key="showLabels" data-func="showLabels">Show labels</button><br />
             <button class="scope-controls pause-button" data-key="scopePause" data-func="pauseButton">Pause plotting</button><br />
+            <button class="scope-controls clear-button" data-key="scopeClear" data-func="clearButton">Clear</button><br />
             <a href="" download="scope" id="saveCanvas"><button class="scope-controls">Export scope image</button></a><br />
             <a href="" download="scopeData.csv" id="saveCanvasData"><button class="scope-controls export">Export CSV data</button></a><br />
           </div>
