Scope: make IDE's socket.io optional

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -312,7 +312,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="../js/p5.min.js"></script>
-    <script src="../socket.io/socket.io.js"></script>
+    <script src="../socket.io/socket.io.js"></script> <!-- this will fail when not serving from the Bela IDE, but such failure is handled gracefully in scope-browser.js -->
     <script src="js/polyfill.js"></script>
     <script src="js/pixi-legacy.js"></script>
     <script src="js/bundle.js"></script>
