--- a/IDE/public/gui/index.html
+++ b/IDE/public/gui/index.html
@@ -11,7 +11,7 @@
 				overflow:hidden
 			}
 		</style>
-		<script src="../js/jquery.js"></script>
+		<script src="js/jquery.js"></script>
 		<script type="module">
 			let isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
 			if(isSafari) {
