Scope, Gui: create symlinks and use relative paths where possible so that each folder can be served by a static server

--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bela Oscilloscope</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Bela Scope">
@@ -311,7 +311,7 @@
     </div><!-- end scope wrapper -->
 
     <script src="js/jquery.js"></script>
-    <script src="../js/p5.min.js"></script>
+    <script src="js/p5.min.js"></script>
     <script src="../socket.io/socket.io.js"></script> <!-- this will fail when not serving from the Bela IDE, but such failure is handled gracefully in scope-browser.js -->
     <script src="js/polyfill.js"></script>
     <script src="js/pixi-legacy.js"></script>
